tests/errors/control_flow/switch_type_violations.sad
method foo() {}
menu foo {
    choice 1 {
        show("one")
    }
}
